--- a/projects/tokyo_sumitomo_shp/preprocessing.ipynb
+++ b/projects/tokyo_sumitomo_shp/preprocessing.ipynb
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,11 +135,31 @@
     "links_df_sim = links_df.copy()\n",
     "links_df_sim['start_igraph'] = links_df_sim['link_start_mapid'].map(nodes_id_dict)\n",
     "links_df_sim['end_igraph'] = links_df_sim['link_end_mapid'].map(nodes_id_dict)\n",
+    "links_df_sim = links_df_sim.dropna(subset=['start_igraph', 'end_igraph'])\n",
+    "links_df_sim['start_igraph'] = links_df_sim['start_igraph'].astype(int)\n",
+    "links_df_sim['end_igraph'] = links_df_sim['end_igraph'].astype(int)\n",
     "links_df_sim['type'] = links_df_sim['rdclasscd']\n",
     "links_df_sim = links_df_sim[['start_igraph', 'end_igraph', 'length', 'fft', 'capacity', 'type', 'geometry']]\n",
     "\n",
     "nodes_df_sim.to_csv('network_inputs/nodes.csv', index=False)\n",
     "links_df_sim.to_csv('network_inputs/links.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "(117077, 6) (205748, 13)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(nodes_df.shape, links_df.shape)"
    ]
   },
   {
@@ -155,6 +175,63 @@
     "    od_sim['node_id_igraph_D'] = od_sim['D'].map(nodes_id_dict)  \n",
     "    od_sim['hour'] = od_sim['trip_hour']\n",
     "    od_sim[['agent_id', 'node_id_igraph_O', 'node_id_igraph_D', 'hour']].to_csv('demand_inputs/od_{}.csv'.format(chunk_num), index=False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "         node_mapid  node_id_igraph         lon        lat\n",
+       "26375  533946_734E2          107161  139.831183  35.743151"
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>node_mapid</th>\n      <th>node_id_igraph</th>\n      <th>lon</th>\n      <th>lat</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>26375</th>\n      <td>533946_734E2</td>\n      <td>107161</td>\n      <td>139.831183</td>\n      <td>35.743151</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 31
+    }
+   ],
+   "source": [
+    "nodes_df_sim[nodes_df_sim['node_id_igraph']==107161]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "                      link_mapid link_start_mapid link_end_mapid  length  \\\n",
+       "58063  533946_7343B_533946_735B1     533946_7343B   533946_735B1      23   \n",
+       "\n",
+       "       speed_limit_kmph  lanes  rdclasscd  \\\n",
+       "58063              40.0    1.0        NaN   \n",
+       "\n",
+       "                                                geometry   fft  capacity  \\\n",
+       "58063  LINESTRING (139.8307454891833 35.7430924218511...  2.07    2000.0   \n",
+       "\n",
+       "       start_nid  end_nid  tile_no  start_igraph  end_igraph  \n",
+       "58063      97985    98271   533946        107037    107323.0  "
+      ],
+      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>link_mapid</th>\n      <th>link_start_mapid</th>\n      <th>link_end_mapid</th>\n      <th>length</th>\n      <th>speed_limit_kmph</th>\n      <th>lanes</th>\n      <th>rdclasscd</th>\n      <th>geometry</th>\n      <th>fft</th>\n      <th>capacity</th>\n      <th>start_nid</th>\n      <th>end_nid</th>\n      <th>tile_no</th>\n      <th>start_igraph</th>\n      <th>end_igraph</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>58063</th>\n      <td>533946_7343B_533946_735B1</td>\n      <td>533946_7343B</td>\n      <td>533946_735B1</td>\n      <td>23</td>\n      <td>40.0</td>\n      <td>1.0</td>\n      <td>NaN</td>\n      <td>LINESTRING (139.8307454891833 35.7430924218511...</td>\n      <td>2.07</td>\n      <td>2000.0</td>\n      <td>97985</td>\n      <td>98271</td>\n      <td>533946</td>\n      <td>107037</td>\n      <td>107323.0</td>\n    </tr>\n  </tbody>\n</table>\n</div>"
+     },
+     "metadata": {},
+     "execution_count": 34
+    }
+   ],
+   "source": [
+    "links_df_sim = links_df.copy()\n",
+    "links_df_sim['start_igraph'] = links_df_sim['link_start_mapid'].map(nodes_id_dict)\n",
+    "links_df_sim['end_igraph'] = links_df_sim['link_end_mapid'].map(nodes_id_dict)\n",
+    "links_df_sim = links_df_sim.dropna(subset=['start_igraph', 'end_igraph'])\n",
+    "links_df_sim[links_df_sim['link_mapid']=='533946_7343B_533946_735B1']"
    ]
   },
   {
